objects/QA_Template_Questions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked means the Question will be included in the QA Case</description>
        <inlineHelpText>Ticked means the Question will be included in the QA Case</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Fail__c</fullName>
        <description>If this Question fails what should be the affect on the Assessment as a whole?</description>
        <globalPicklist>QA_Auto_Fail</globalPicklist>
        <inlineHelpText>If this Question fails what should be the affect on the Assessment as a whole?</inlineHelpText>
        <label>Auto Fail</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <globalPicklist>QA_Category</globalPicklist>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>The sequence in which the Questions should be displayed during an Assessment</description>
        <inlineHelpText>The sequence in which the Questions should be displayed during an Assessment</inlineHelpText>
        <label>Display Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <globalPicklist>QA_Sub_Category</globalPicklist>
        <label>Sub Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <description>Maps to Case.QA_Template</description>
        <globalPicklist>QA_Template</globalPicklist>
        <label>Template</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <label>Weighting</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>QA Template Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template__c</columns>
        <columns>Question__c</columns>
        <columns>Weighting__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllQACredit</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Weighting__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Active__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QA_Template_Questions__c.PAF_QA</value>
        </filters>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>QA Credit</value>
        </filters>
        <label>All QA Credit</label>
        <sharedTo>
            <group>QA_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Compliance_Questions</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Weighting__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Active__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>PAF Quality Assurance (Settlements)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QA_Template_Questions__c.PAF_QA</value>
        </filters>
        <label>All Compliance Questions</label>
    </listViews>
    <listViews>
        <fullName>All_QA_Customer_Service</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Weighting__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Active__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>PAF Customer Service</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QA_Template_Questions__c.PAF_QA</value>
        </filters>
        <label>All QA Customer Service</label>
    </listViews>
    <listViews>
        <fullName>All_QA_Settlements</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Weighting__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Auto_Fail__c</columns>
        <columns>Active__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template__c</field>
            <operation>equals</operation>
            <value>PAF Quality Assurance (Settlements)</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QA_Template_Questions__c.PAF_QA</value>
        </filters>
        <label>All QA Settlements</label>
    </listViews>
    <nameField>
        <displayFormat>QAQ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Template Questions</pluralLabel>
    <recordTypes>
        <fullName>PAF_QA</fullName>
        <active>true</active>
        <label>PAF QA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>